--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint './**/*.ts{,x}'",
+    "format": "eslint --fix './**/*.ts{,x}'"
   },
   "dependencies": {
     "next": "10.0.3",
@@ -15,6 +17,9 @@
   "devDependencies": {
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
+    "eslint": "^7.15.0",
+    "eslint-config-smarthr": "^5.0.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
