--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "10.0.3",
+    "prando": "^5.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
