--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint './**/*.ts{,x}'",
-    "format": "eslint --fix './**/*.ts{,x}'"
+    "format": "eslint --fix './**/*.ts{,x}'",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "next": "10.0.3",
     "prando": "^5.1.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "smarthr-ui": "^12.1.1",
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.15.0",
     "eslint-config-smarthr": "^5.0.0",
+    "patch-package": "^6.2.2",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
